# reposage

./: .gitignore  .reposage_summaries.json  README.md  main.py  nixpacks.toml  notes.md  pyproject.toml  pyrightconfig.json  reposage.db  reposage_summaries.json
call_graphs/: 65210891_medmemory-mcp.json  medmemory-mcp.json
frontend/: auth.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AmbiguousCandidatePicker.tsx  ArchitectureView.tsx  AuthDebugButton.tsx  AuthWidget.tsx  BlastRadiusView.tsx  CitationCard.tsx  CodebaseMapView.tsx  ConfirmDialog.tsx  DiagramForm.tsx  ExploreTourView.tsx  IngestForm.tsx  IngestModal.tsx  Modal.tsx  ModuleArchitectureGraph.tsx  QueryForm.tsx  RepoActionsMenu.tsx  RepoCard.tsx  RepoSelector.tsx  ReposDashboard.tsx  Sidebar.tsx
frontend/lib/: api.ts  graphHighlight.ts
scripts/: diagnostic.py  test_aliased_import_shape.py  test_call_extraction.py  test_call_graph.py  test_chroma.py  test_chunking.py  test_codebase_map.py  test_confidence_recalibration.py  test_flow_diagram.py  test_imports.py  test_indexing.py  test_ingestion.py  test_query.py  test_repo_lifecycle.py  test_resolution.py  test_symbol_table.py  test_synthesize.py  test_threshold_calibration.py  test_treesitter.py
src/reposage/api/: main.py
src/reposage/db/: models.py
src/reposage/graph/: call_graph.py  codebase_map.py  flow_diagram.py
src/reposage/indexing/: chunk.py  summary_store.py  vectorstore.py
src/reposage/ingestion/: loader.py
src/reposage/parsing/: extractor.py
(+2 files in other folders)
