[project]
name = "reposage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "gitpython>=3.1.50",
    "google-genai>=2.10.0",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.50.0",
]
